Complete MERN blog app with authentication and core features

--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,22 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "pnpm nodemon"
-    },
+    "dev": "nodemon server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.3"
+    "mongoose": "^8.16.3",
+    "react-router-dom": "^7.7.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
